--- a/style.sass
+++ b/style.sass
@@ -1,9 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans)
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&display=swap')
 
 body 
-    font-family: "Open Sans", sans-serif
+    width: 100%
+    font-family: 'Poppins', sans-serif
     font-weight: 400
     color: black
+    background-color: #f0ece3
     .d3-tip
         background-color: rgba(0,0,0,0.8)
         border-radius: 6px
@@ -12,6 +14,7 @@ body
         padding: 0.5em
         .date .temperature
         .variance
+
 
 section
     width: auto
@@ -22,7 +25,8 @@ section
     heading
         text-align: center
     svg
-        stroke-width: 1
+        
+        stroke-width: 0.5
         stroke: black
         .y-axis, .x-axis, .legend
             text
