--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url("https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&display=swap");
 body {
-  font-family: "Open Sans", sans-serif;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
   font-weight: 400;
   color: black;
+  background-color: #f0ece3;
 }
 
 body .d3-tip {
@@ -26,7 +28,7 @@ section heading {
 }
 
 section svg {
-  stroke-width: 1;
+  stroke-width: 0.5;
   stroke: black;
 }
 
